Fix: Changed summary sidecar to display as a structured list (#46)
* changed summary sidecar to display as a structured list

* readded css style

* Update index.scss

removed extra spacing

* Update summary.tsx

* Update sidecar.tsx

--- a/src/src-web/styles/index.scss
+++ b/src/src-web/styles/index.scss
@@ -304,7 +304,7 @@ span{
   width: 100%;
   height: 100%;
 
-  .repl-input-element {
+   .repl-input-element {
     width: 100%;
   }
 }
@@ -591,5 +591,31 @@ span{
 .custom-content{
   .related--resource{
     width: 100%;
+  }
+}
+
+.scrollable{
+  &.bx--structured-list--summary{
+    width: 98%;
+    margin-left: 2%;
+    padding-right: 20px
+  }
+
+  .bx--structured-list-row{
+    &:hover{
+      background-color: var(--color-sidecar-header)
+    }
+  }
+
+  .bx--structured-list-td-header{
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    color: var(--color-name);
+  }
+
+  .bx--structured-list-td-body{
+    font-size: 1.2rem;
+    color: var(--color-text-01);
   }
 }
